My first commit

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-    <h1>Paymenet form example</h1>
+    <div class="container-fluid ">
+    <h1>Payment form example</h1>
     <form action="mailto:karelcr1999@gmail.com" method="get">
         
         <div class="row">
