--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                                
                                 <div class="cards-style">
                                     <input type="radio" name="card-company" id="master-card"><img
-                                        src="./img/mastercard-icon-1024x658-hqjeq47z.png" class="card-company">
+                                        src="./img/credit-card.png" class="card-company">
                                     <input type="radio" name="card-company" id="visa"><img
-                                        src="./img/visa-logo-visa-icon-free-free-vector.jpg" class="card-company">
+                                        src="./img/visa-logo.png" class="card-company">
                                     <input type="radio" name="card-company" id="dinners-club"><img
-                                        src="./img/visa-logo-visa-icon-free-free-vector.jpg" class="card-company">
+                                        src="./img/diners-club.png" class="card-company">
                                     <input type="radio" name="card-company" id="amex"><img
-                                        src="./img/visa-logo-visa-icon-free-free-vector.jpg" class="card-company">
+                                        src="./img/symbol.png" class="card-company">
                                 </div>
 
                             </fieldset>
